feat: Add complete Render.com deployment configuration
- Add render.yaml for automatic service configuration
- Create gunicorn.conf.py for production WSGI server
- Add comprehensive RENDER_DEPLOYMENT_GUIDE.md with step-by-step instructions
- Update requirements.txt to include gunicorn
- Modify app.py for Render compatibility (port handling, logging)
- Update documentation to reference Render deployment
- Ready for permanent hosting on Render.com with auto-deploy from GitHub

--- a/static/index.html
+++ b/static/index.html
@@ -61,10 +61,10 @@
                                         <div class="card h-100">
                                             <div class="card-body">
                                                 <h6 class="card-title">
-                                                    <i class="fas fa-cloud text-info"></i> Cloudflare Pages
+                                                    <i class="fas fa-cloud text-info"></i> Render.com
                                                 </h6>
-                                                <p class="small">永続デプロイメント</p>
-                                                <small class="text-muted">準備中...</small>
+                                                <p class="small">永続Webアプリ</p>
+                                                <small class="text-success">デプロイ準備完了</small>
                                             </div>
                                         </div>
                                     </div>
